// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`events handler 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { t01 } = $r$({
    components: { t01: \\"p1\\" },
    parts: { p1: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_1\\\\\\">Hello MXT!</div>\\\\n  \\",
                attachTo: [{
                        id: \\"tagid_1\\",
                        originalId: \\"old\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color}\` };
                        },
                        events: [{
                                name: \\"click\\",
                                flags: 0,
                                handler: ($ev$: Event, $dc$: any) => {
                                    const { doClick } = $dc$.$data;
                                    doClick.bind($dc$.$data)($ev$, $dc$.$data, $dc$);
                                }
                            }]
                    }]
            };
        } }
});
export { t01 };
export default t01;
"
`;

exports[`events handler and propagation functions 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { t01 } = $r$({
    components: { t01: \\"p2\\" },
    parts: { p2: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_2\\\\\\">Hello MXT!</div>\\\\n  \\",
                attachTo: [{
                        id: \\"tagid_2\\",
                        originalId: \\"old\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color}\` };
                        },
                        events: [{
                                name: \\"click\\",
                                flags: 7,
                                handler: ($ev$: Event, $dc$: any) => {
                                    const { doClick } = $dc$.$data;
                                    doClick.bind($dc$.$data)($ev$, $dc$.$data, $dc$);
                                }
                            }]
                    }]
            };
        } }
});
export { t01 };
export default t01;
"
`;

exports[`events handler with options 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { t01 } = $r$({
    components: { t01: \\"p3\\" },
    parts: { p3: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_3\\\\\\">Hello MXT!</div>\\\\n  \\",
                attachTo: [{
                        id: \\"tagid_3\\",
                        originalId: \\"old\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color}\` };
                        },
                        events: [{
                                name: \\"click\\",
                                flags: 56,
                                handler: ($ev$: Event, $dc$: any) => {
                                    const { doClick } = $dc$.$data;
                                    doClick.bind($dc$.$data)($ev$, $dc$.$data, $dc$);
                                }
                            }]
                    }]
            };
        } }
});
export { t01 };
export default t01;
"
`;

exports[`events no handler 1`] = `
"import $r$ from \\"../mxt-rt\\";
const { t01 } = $r$({
    components: { t01: \\"p4\\" },
    parts: { p4: $pf$ => {
            return {
                template: \\"\\\\n    <div id=\\\\\\"tagid_4\\\\\\">Hello MXT!</div>\\\\n  \\",
                attachTo: [{
                        id: \\"tagid_4\\",
                        originalId: \\"old\\",
                        attrs: $dc$ => {
                            const { color } = $dc$.$data;
                            return { style: \`color: \${color}\` };
                        }
                    }]
            };
        } }
});
export { t01 };
export default t01;
"
`;
